[project]
name = "git_helpers"
version = "0.1.0"

requires-python = ">= 3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
git-bisectrun = "git_helpers.bisectrun:entry_point"
git-pop = "git_helpers.pop:entry_point"
git-snap = "git_helpers.snap:entry_point"
git-squash = "git_helpers.squash:entry_point"
git-upush = "git_helpers.upush:entry_point"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
files = ["src", "tests"]
strict = true
enable_error_code = "unreachable, redundant-expr, possibly-undefined, truthy-bool, truthy-iterable, unused-awaitable, explicit-override, mutable-override"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
