[project]
name = "git_helpers"
version = "0.1.0"

requires-python = ">= 3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "mypy"]

[project.scripts]
git-bisectrun = "git_helpers.commands.bisectrun:entry_point"
git-edit = "git_helpers.commands.edit:entry_point"
git-pop = "git_helpers.commands.pop:entry_point"
git-snap = "git_helpers.commands.snap:entry_point"
git-squash = "git_helpers.commands.squash:entry_point"
git-upush = "git_helpers.commands.upush:entry_point"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/tests"
files = ["src", "tests"]
strict = true
enable_error_code = "unreachable, redundant-expr, possibly-undefined, truthy-bool, truthy-iterable, unused-awaitable, explicit-override, mutable-override"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
